# tersh

./: .gitignore  .gitmodules  CMakeLists.txt
include/: vtparse.h  vtparse_table.h
src/: err.h  lineedit.c  lineedit.h  poller.c  poller.h  process.c  process.h  smalloc.c  smalloc.h  st.c  st.h  st_config.h  st_widget.c  st_widget.h  tersh.c  tersh.h.in  ui.c  ui.h  vec.c  vec.h  vterm.c  vterm.h  widget.c  widget.h  widget_vterm.c  widget_vterm.h  win.h
test/: ech  sleeper  tabs
